My workaround for the negative chars didn't work.
All bets are off in negative char land. This workaround "works" but
there is still a negative value in the boxed char, which can come back
out. This needs fixing...